fixed media query on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -8,6 +8,11 @@
     --font-main: "Calibre", "Inter", "San Francisco", "SF Pro Text", -apple-system, system-ui, sans-serif
 }
 
+html,
+body {
+    overflow-x: hidden;
+}
+
 .intro1 {
     display: flex;
     flex-direction: row;
@@ -200,10 +205,13 @@ footer p {
 }
 
 #contact-me {
+    display: flex;
     font-size: 25px;
     margin: 15px 3% 35px 2.5%;
     font-family: var(--font-main)
 }
+
+
 
 .fa-envelope {
     margin-right: 10px;
@@ -282,4 +290,14 @@ footer p {
         margin: 0px 3% 30px 2.5%;
         font-family: var(--font-main)
     }
+
+    #contact-heading {
+        font-size: 20px;
+        display: flex;
+        flex-direction: row;
+        font-family: var(--font-secondary);
+        margin-bottom: -30px;
+        margin-top: 100px
+    }
+
 }
